[package]
name = "actix-gs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
cargo-watch = "8.4.1"
chrono = "0.4.31"
log = "0.4.20"
reqwest = "0.11.22"
serde = "1.0.192"
serde_json = "1.0.108"
